<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    tools:context=".RegUsuarioActivity">

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/round_button"
        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_blanco"
        />
    <TextView
        android:id="@+id/txt_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textAllCaps="true"
        android:textSize="27sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/insanibc_1"
        android:textColor="@color/white"
        />
    <EditText
        android:id="@+id/et_reg_nombre_usuario"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/nombre_usuario"
        android:background="@drawable/round_edit_text"
        android:textColorHint="@color/dark_blue"
        android:textSize="14sp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="18dp"
        android:textColor="@color/dark_blue"
        />
    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/email"
        android:background="@drawable/round_edit_text"
        android:textColorHint="@color/dark_blue"
        android:textSize="14sp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/dark_blue"
        />
    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/password"
        android:background="@drawable/round_edit_text"
        android:textColorHint="@color/dark_blue"
        android:textSize="14sp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/dark_blue"
        />
    <EditText
        android:id="@+id/et_reg_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/repeat_password"
        android:background="@drawable/round_edit_text"
        android:textColorHint="@color/dark_blue"
        android:textSize="14sp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/dark_blue"
        />

    <EditText
        android:id="@+id/et_reg_location"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/location"
        android:background="@drawable/round_edit_text"
        android:textColorHint="@color/dark_blue"
        android:textSize="14sp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/dark_blue"
        />
    <EditText
        android:id="@+id/et_reg_profession"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/profession"
        android:background="@drawable/round_edit_text"
        android:textColorHint="@color/dark_blue"
        android:textSize="14sp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/dark_blue"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/segoe_ui_symbol"
            android:text="Continuar"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/btn_continuar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/round_button"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:layout_width="280dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/politica_aceptacion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="10sp" />
</LinearLayout>