<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    tools:context=".registrarActivity">

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/round_button"
        android:text="A"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_blanco"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:fontFamily="@font/insanibc_1"
        android:textSize="25sp"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="15dp"
        android:text="@string/bienvenida_registro"
        android:textColor="@color/white"
        android:fontFamily="@font/segoe_ui_symbol"
        android:textSize="13sp"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/usuario"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_regis_usuario"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_button"
        android:text="@string/usuario"
        android:textSize="12dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/texto_usuario_registrarse"
        android:textColor="@color/white"
        android:fontFamily="@font/segoe_ui_symbol"
        android:textSize="13sp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:src="@drawable/edificio" />

    <Button
        android:id="@+id/btn_regis_empresa"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:text="Empresa"
        android:textAllCaps="false"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:textSize="12dp" />
    <TextView
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/texto_empresa_registrarse"
        android:textColor="@color/white"
        android:fontFamily="@font/segoe_ui_symbol"
        android:textSize="13sp"
        />
</LinearLayout>